added html button and label for measurement

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
@@ -27,6 +27,9 @@
 			<input id="btnDisableDaemon" type="button" style="font-size: 18px;" />
 			<div>&nbsp;</div>
 			<label id="lblDaemonStatus" style="width: 200px;">Status of daemon</label>
+			<div>&nbsp;</div>
+			<input id="btnmeasurementValue" type="button" style="font-size: 18px;" />
+			<label id="lblmeasurementValue" style="width: 200px;">Messwert: </label>
 		</form>
 	</body>
 </html>
