Added Button and Field to HTML to send Message

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
@@ -30,6 +30,9 @@
 			<div>&nbsp;</div>
 			<input id="btnmeasurementValue" type="button" style="font-size: 18px;" />
 			<label id="lblmeasurementValue" style="width: 200px;">Messwert: </label>
+			<div>&nbsp;</div>
+			<input id="btnSendMessage" type="button" style="font-size: 18px;" />
+			<label>Enter message:</label> <input id="lblSendMessage" type="text"/>
 		</form>
 	</body>
 </html>
