--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
@@ -32,7 +32,7 @@
 			<label id="lblmeasurementValue" style="width: 200px;">Messwert: </label>
 			<div>&nbsp;</div>
 			<input id="btnSendMessage" type="button" style="font-size: 18px;" />
-			<label>Enter message:</label> <input id="lblSendMessage" type="text"/>
+			<label>Enter message:</label> <input id="txtFldSendMessage" type="text"/>
 		</form>
 	</body>
 </html>
