Added HTML Message Label

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
@@ -5,7 +5,7 @@
 		<style>
 			label {
 				display: inline-block;
-				width: 100px;
+				width: 200px;
 				height: 28px;
 			}
 
@@ -31,8 +31,15 @@
 			<input id="btnmeasurementValue" type="button" style="font-size: 18px;" />
 			<label id="lblmeasurementValue" style="width: 200px;">Messwert: </label>
 			<div>&nbsp;</div>
+			<br>
+			<label>Enter message:</label> 
+			<br>
+			<input id="txtFldSendMessage" type="text"/>
+			<br>
+			<br>
 			<input id="btnSendMessage" type="button" style="font-size: 18px;" />
-			<label>Enter message:</label> <input id="txtFldSendMessage" type="text"/>
+			<br>
+			<label id="lblSendMessage" style="width: 500px;">Message: </label>
 		</form>
 	</body>
 </html>
