Added buttons and functionality for Motor On / Off

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installation.html
@@ -40,6 +40,12 @@
 			<input id="btnSendMessage" type="button" style="font-size: 18px;" />
 			<br>
 			<label id="lblSendMessage" style="width: 500px;">Message: </label>
+
+			<div>&nbsp;</div>
+			<input id="btnMotorOn" type="button" style="font-size: 18px;" />
+			<input id="btnMotorOff" type="button" style="font-size: 18px;" />
+
+
 		</form>
 	</body>
 </html>
