Added logo to ProgramNode

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -23,10 +23,20 @@
 			#header {
 				padding: 0px 0px 20px 0px;
 			}
+
+			#logo {
+				padding: 0px 0px 20px 0px;
+			}
+
 		</style>
 	</head>
 	<body>
+		<div id="logoDiv">
+			<img src="none.png" id="logo" style="width: 438px; height: 144px"/>
+		</div>
 		<form>
+			<!-- <img id="logo"/> -->
+
 			<p>This program node will open a popup on execution.</p><br \>
 			<label>Enter your name ;) :</label> <input id="yourname" type="text"/>
 			<br/>
@@ -36,5 +46,7 @@
 				Message: <label id="messagePreviewLabel" style="width: 400px;"/>
 			</div>
 		</form>
+
+		
 	</body>
 </html>
