--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -38,13 +38,14 @@
 			<!-- <img id="logo"/> -->
 
 			<p>This program node will open a popup on execution.</p><br \>
-			<label>Enter your name ;) :</label> <input id="yourname" type="text"/>
+			<label>Enter your name:</label> <input id="yourname" type="text"/>
 			<br/>
 			<div id="preview">
 				<h3 id="header">Preview</h3><br \>
 				Title: <label id="titlePreviewLabel" style="width: 400px;"/> <br \>
 				Message: <label id="messagePreviewLabel" style="width: 400px;"/>
 			</div>
+			<label>Befehl:</label> <input id="command" type="text"/>
 		</form>
 
 		
