- keepalive function - close (G2), open (G3), move (G0), home (G28) - programmNode update

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -59,6 +59,16 @@
 					 <input id="motor_drive_NumberInput" type="number" step="1" style="width: 200px; height: 28px;"/>
 					 <label>Schritte verfahren</label>
 					 <br/>
+
+					 <input type="radio" id="command_Choice4" name="command" value="motor_close">
+					 <label>Greifer schließen:</label>
+					 <input id="motor_close_NumberInput" type="number" step="1" min="0" max="100" style="width: 200px; height: 28px;"/>
+					 <label>N </label>
+					 <br/>
+
+					 <input type="radio" id="command_Choice5" name="command" value="motor_open">
+					 <label>Greifer öffnen</label>
+					 <br/>
 				</div>
 
 			</div>
