added disable functionality on deselected radio buttons, changed motor drive number description from Schritte to mm

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -57,7 +57,7 @@
 					<input type="radio" id="command_Choice3" name="command" value="motor_drive">
 					 <label>Motor um</label>
 					 <input id="motor_drive_NumberInput" type="number" step="1" style="width: 200px; height: 28px;"/>
-					 <label>Schritte verfahren</label>
+					 <label>mm verfahren</label>
 					 <br/>
 
 					 <input type="radio" id="command_Choice4" name="command" value="motor_close">
