added G28 to URcap

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -64,6 +64,9 @@
 
 					<input type="radio" id="command_Choice5" name="command" value="motor_open">
 					<br/>
+
+					<input type="radio" id="command_Choice6" name="command" value="motor_open2">
+					<br/>
 				</div>
 
 			</div>
