first part of max force input in installation node

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
@@ -28,7 +28,7 @@
 			<label id="lblTestConnection" style="width: 200px;">Antwort: </label>
 			<div>&nbsp;</div>
 			<br>
-			<label>Enter message:</label> 
+			<label>Nachricht:</label> 
 			<br>
 			<input id="txtFldSendMessage" type="text"/>
 			<br>
@@ -37,7 +37,12 @@
 			<br>
 			<label id="lblSendMessage" style="width: 500px;">Antwort: </label>
 
-			<div>&nbsp;</div>
+			<br>
+			<label>maximale Kraft:</label> 
+			<br>
+			<input id="txtFldmaxForce" type="text"/>
+
+			<br>
 			<input id="btnMotorOn" type="button" style="font-size: 18px;" />
 			<input id="btnMotorOff" type="button" style="font-size: 18px;" />
 			<br>
