--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -43,32 +43,31 @@
 			<h3 id="command_header">Befehl</h3><br />
 
 			<div>
-				<input type="radio" id="command_Choice1" name="command" value="custom_command">
-				<input id="custom_command_TextInput" type="text" style="width: 200px; height: 28px;" />
-				<br />
+				<input type="radio" id="command_choice1" name="command" value="custom_command">
+				<input id="custom_command_textinput" type="text" style="width: 200px; height: 28px;" />
+				<br/>
 
-				<input type="radio" id="command_Choice2" name="command" value="motor_power">
-				<select id="motor_power_Select" style="width: 200px; height: 28px;">
+				<input type="radio" id="command_choice2" name="command" value="motor_power">
+				<select id="motor_power_select" style="width: 200px; height: 28px;">
 					<option>Dropdown list will be empty, because Option does not work</option>
 				</select>
-				<br />
+				<br/>
 
-				<input type="radio" id="command_Choice3" name="command" value="motor_drive">
-				<input id="motor_drive_NumberInput" type="number" step="1" style="width: 200px; height: 28px;" />
+				<input type="radio" id="command_choice3" name="command" value="motor_drive">
+				<input id="motor_drive_numberinput" type="number" style="width: 200px; height: 28px;" />
 				<label>mm verfahren</label>
+				<br/>
+
+				<input type="radio" id="command_choice4" name="command" value="motor_close">
+				<input id="motor_close_numberinput" type="number" style="width: 200px; height: 28px;" />
+				<label id="motor_close_label">N </label>
 				<br />
 
-				<input type="radio" id="command_Choice4" name="command" value="motor_close">
-				<input id="motor_close_NumberInput" type="number" step="1" min="0" max="100"
-					style="width: 200px; height: 28px;" />
-				<label>N </label>
-				<br />
+				<input type="radio" id="command_choice5" name="command" value="motor_open">
+				<br/>
 
-				<input type="radio" id="command_Choice5" name="command" value="motor_open">
-				<br />
-
-				<input type="radio" id="command_Choice6" name="command" value="motor_open2">
-				<br />
+				<input type="radio" id="command_choice6" name="command" value="motor_open2">
+				<br/>
 			</div>
 
 		</div>
