gripper close ui change - min is forced to 0 in html - if values higher than max are inputted, the value is changed to the max value

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -59,7 +59,7 @@
 				<br/>
 
 				<input type="radio" id="command_choice4" name="command" value="motor_close">
-				<input id="motor_close_numberinput" type="number" style="width: 200px; height: 28px;" />
+				<input id="motor_close_numberinput" type="number" min="0" style="width: 200px; height: 28px;" />
 				<label id="motor_close_label">N </label>
 				<br />
 
