changed name of java files according to project title

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
@@ -24,26 +24,28 @@
 			<br/>
 			<label id="daemon_status" style="width: 200px;">Daemonstatus</label>
 			<br/>
+			<p>&nbsp;</p>
+			<br/>
 			<label>Nachricht:</label> 
 			<br/>
 			<input id="send_message_txtfld" type="text"/>
-			<br/>
 			<br/>
 			<input id="send_message_btn" type="button" style="font-size: 18px;" />
 			<br/>
 			<label id="send_message_lbl" style="width: 500px;">Antwort: </label>
 			<br/>
-
+			<p>&nbsp;</p> 
 			<br/>
-			<label>maximale Kraft:</label> 
+			<label>maximale Kraft [N]:</label> 
 			<br/>
 			<input id="max_force" type="number"/>
 			<br/>
-
+			<p>&nbsp;</p> 
 			<br/>
 			<input id="motor_on" type="button" style="font-size: 18px;" />
 			<input id="motor_off" type="button" style="font-size: 18px;" />
 			<br/>
+			<p>&nbsp;</p> 
 			<br/>
 			<label>Position:</label> 
 			<label id="position_value">---</label> 
