added gripperStatusLabel - daemonStatusLabel should now show the correct status

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/installationnode.html
@@ -22,7 +22,9 @@
 			<input id="enable_daemon" type="button" style="font-size: 18px;" />
 			<input id="disable_daemon" type="button" style="font-size: 18px;" />
 			<br/>
-			<label id="daemon_status" style="width: 200px;">Daemonstatus</label>
+			<label id="daemon_status" style="width: 500px;">Daemonstatus:  ---</label>
+			<br/>
+			<label id="gripper_status" style="width: 500px;">Greiferstatus: ---</label>
 			<br/>
 			<p>&nbsp;</p>
 			<br/>
