added "save return variables as"

--- a/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
+++ b/URCap/com.ur.urcap.ips.greifer/src/main/resources/com/ur/urcap/ips/greifer/programnode.html
@@ -12,7 +12,7 @@
 
 		label {
 			display: inline-block;
-			width: 150px;
+			width: 250px;
 			height: 28px;
 		}
 
@@ -68,6 +68,13 @@
 
 				<input type="radio" id="command_choice6" name="command" value="motor_open2">
 				<br/>
+			</div>
+			<p>&nbsp;</p> 
+			<br/>
+			<div>
+				<label>Rückgabewert speichern als:</label>
+				<br/>
+				<input id="return_var_save_as" type="text" style="width: 200px; height: 28px;" />
 			</div>
 
 		</div>
